PDP-Parity/css/main.css
/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */


/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */


/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}


/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}


/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}


/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}


/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}


/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}


/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ==========================================================================
   Author's custom styles
   ========================================================================== */


/* Module and variant switchers */

.dated {
    display: block;
}

.dateless {
    display: none;
}

.planned {
    display: block;
}

.couponCode {
    display: block;
}

.v1 {
    display: none;
}

.v2 {
    display: none;
}

.v3 {
    display: none;
}

.v4 {
    display: none;
}

input[type="checkbox"],
input[type="radio"] {
    display: inline;
    margin-left: 4px;
    margin-bottom: 12px;
    margin-top: 12px;
    margin-right: 4px;
}


/* Standard elements */

body {
    margin: 0;
    color: #333;
}

.native {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

html {
    line-height: 1em;
}

.container {
    width: 100%;
    max-width: 750px;
    margin: 0 auto;
    box-sizing: border-box;
}

span {
    display: inline-block;
}

.inner {
    padding: 16px 24px;
}

p {
    display: block;
    -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    line-height: 1em;
}

a {
    text-decoration: none;
    color: #026dc5;
}

.normal {
    font-weight: normal;
}

.bold {
    font-weight: bold;
}

.italic {
    font-style: italic;
}

.centered {
    text-align: center;
}

.scrim {
    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000', GradientType=0);
    /* IE6-9 */
}

.strikethrough {
    text-decoration: line-through;
}

.right {
    text-align: right;
}

.map-widget {
    height: 180px;
}


/* Alerts */

.urgency {
    display: block;
}

.msg-closable {
    padding-right: 32px;
}

.msg-closable .close:after {
    font-family: "hcom-icons";
    font-size: 1em;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    content: "";
}

.msg-closable .close {
    cursor: pointer;
    font-size: 16px;
    font-style: normal;
    height: 16px;
    line-height: 16px;
    position: absolute;
    right: 8px;
    top: 8px;
    width: 16px;
}

.msg-alert {
    background-color: #fff4cc;
    border: 1px solid #ffe066;
    color: #333333;
    padding: 8px 32px 8px 16px;
    border-radius: 4px;
    margin-bottom: 8px;
    position: relative;
    left: -50%;
    margin: 8px;
    font-size: 16px;
    line-height: 20px;
}

.fixed-bottom {
    position: fixed;
    bottom: 0;
    z-index: 3;
    left: 50%;
}


/* Fixed book now button */

.fixed-footer-navigation-wrapper {
    bottom: 0;
    display: block;
    left: 0;
    position: fixed;
    right: 0;
    z-index: 2;
}


/* Flex Elements */

.flex-wrapper {
    display: flex;
    align-items: center;
}

.flex-wrapper-top {
    display: flex;
}

.fb-between {
    justify-content: space-between;
}

.fb-center {
    justify-content: center;
}

.fb-end {
    justify-content: flex-end;
}

ul {
    padding: 0;
    margin: 0;
    list-style-type: none;
}

.col {
    flex: 1;
    margin-right: 8px;
}

.col:last-child {
    margin-right: 0;
}

.col .tick li,
.col .bullet li {
    margin-left: 20px;
}

.tick li,
.bullet li {
    font-size: 13px;
    list-style-type: none;
    display: block;
    margin-bottom: 8px;
}

.tick li:before {
    font-size: 12px;
    font-family: hcom-icons;
    content: "\e925";
    color: #333;
    margin-right: 7px;
    margin-left: -18px;
    vertical-align: text-bottom;
}

.bullet li:before {
    font-size: 6px;
    line-height: 16px;
    font-family: hcom-icons;
    content: "\e901";
    color: #333;
    margin-right: 14px;
    vertical-align: text-bottom;
}
/* ... */

